feat: Complete So-Eat landing page with bilingual support and legal pages
- Add comprehensive client page with booking steps, interactive menu, and recommendations
- Implement Terms & Conditions and Privacy Policy pages with full Arabic/English translations
- Add LanguageSwitcher component with proper locale routing
- Replace CSS illustrations with optimized images (dish, chicken, hummus, bread, invitations)
- Fix Arabic text alignment and RTL support across all components
- Add MouseTrackingButton component with advanced hover effects
- Update footer with working links to legal pages
- Fix hydration errors and build issues
- Optimize ThreeBackground with reduced particle count
- Add new food and brand images for better visual appeal
- Complete bilingual translation system for all components

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,29 +1,181 @@
 {
   "nav": {
     "home": "الرئيسية",
-    "about": "من نحن",
-    "services": "الخدمات",
-    "contact": "اتصل بنا"
+    "reservations": "الحجوزات",
+    "menu": "المنيو",
+    "waitlist": "قوائم الانتظار",
+    "loyalty": "برامج الولاء",
+    "analytics": "التقارير",
+    "feedback": "التقييمات",
+    "security": "الأمان",
+    "pricing": "الأسعار",
+    "faq": "الأسئلة الشائعة"
   },
   "header": {
     "promo": {
-      "text": "احصل على تجربة مجانية 14 يوم وابدأ نظم حجوزات مطعمك اليوم",
+      "text": "احصل على تجربة مجانية لمدة 14 يوم وابدأ نظام حجز مطعمك اليوم",
       "cta": "اشترك الآن"
     },
     "actions": {
       "subscribe": "اشترك الآن",
       "contact": "تواصل معنا",
-      "ClientPage": "سـو-ايت للزبائــــن"
+      "ClientPage": "سو إيت للعملاء",
+      "BusinessPage": "سو إيت للأعمال",
+      "HomePage": "العودة للرئيسية"
     }
   },
+  "clientPage": {
+    "title": "سو إيت للعملاء",
+    "subtitle": "حمل تطبيقنا المحمول واستمتع بأفضل تجربة مطعم",
+    "description": "اطلب الطعام، احجز الطاولات، واكتشف مطاعم جديدة مع تطبيقنا المحمول سهل الاستخدام."
+  },
   "hero": {
-    "title": "حل متكامل لإدارة مطعمك مع منصة سو إيت",
+    "title": "حــــــوّل مطعمك لتجربة رقمية متكاملـــــة مـــــن الحجز حتى الدفـــــــع",
     "subtitle": "نظام إدارة شامل للمطاعم",
-    "description": "منصة متكاملة تساعدك في إدارة مطعمك بكفاءة عالية مع أدوات تحليل متقدمة وتقارير شاملة",
-    "startNow": "ابدأ الآن",
-    "learnMore": "تعرف أكثر",
+    "description": "من لحظــة الحجز إلى الدفع، كـل عمليات مطعمك تُدار تلقائيًا عبر نظــام موثــــوق مصمم خصيصًا لمطعمـــك.",
+    "startNow": "طلــــب عـــرض توضيــــحي",
+    "learnMore": "تـــعرف أكـــثر",
     "heroImageAlt": "لوحة تحكم المطعم",
     "dashboardPreview": "معاينة لوحة التحكم"
+  },
+  "clientHero": {
+    "title": "احجز طاولتك في ثوانٍ واستمتع بتجربة ذكية بدون انتظار أو اتصال",
+    "description": "تطبيق واحد يجمع لك كل المطاعم والعروض والحجوزات في مكان واحد. احجز طاولتك بنقرة واحدة بدون اتصال أو انتظار",
+    "downloadOn": "تنزيل من",
+    "getItOn": "تنزيل من",
+    "searchPlaceholder": "ابحث عن مطعم أو طبق..."
+  },
+  "smartPayment": {
+    "badge": "الدفع الذكي",
+    "title": "ادفع بالطريقة التي تريحك..",
+    "description": "مدى، STC Pay أو Apple Pay - كل الطرق متاحة داخل التطبيق.",
+    "features": {
+      "electronic": {
+        "title": "دفع إلكتروني آمن وسريع",
+        "description": "تمتع بعملية دفع سريعة وآمنة عبر جميع وسائل الدفع الإلكترونية المتاحة"
+      },
+      "security": {
+        "title": "حفظ البطاقة المفضلة",
+        "description": "احفظ بطاقتك المفضلة للدفع السريع في المرات القادمة بأمان تام"
+      },
+      "advance": {
+        "title": "دفع مسبق أو داخل المطعم",
+        "description": "اختر بين الدفع المسبق عند الحجز أو الدفع داخل المطعم حسب رغبتك"
+      }
+    }
+  },
+  "bookingSteps": {
+    "title": "خطوات الحجز",
+    "steps": {
+      "choose": {
+        "title": "اختر مطعمك",
+        "description": "ما بين كل الخيارات سوء ايت بيشجلك الافضل اللي يليق بيك."
+      },
+      "book": {
+        "title": "احجز وقتك المناسب",
+        "description": "بدون انتظار وحجز اختر وقتك المناسب ودع سو ايت يحجزلك شي."
+      },
+      "enjoy": {
+        "title": "استمتع بتجربة فريدة",
+        "description": "سو ايت يحطلك كل ذكريات لا تنسى مع من تحب."
+      }
+    }
+  },
+  "interactiveMenu": {
+    "badge": "القائمة التفاعلية",
+    "title": "تصفح القائمة وتعرف على الأطباق قبل وصولك.",
+    "description": "استكشف قائمة الطعام بالتفصيل واطلع على مكونات كل طبق ومعلوماته الغذائية قبل زيارتك للمطعم.",
+    "cta": "تصفح القائمة",
+    "features": {
+      "browse": {
+        "title": "تصفح القائمة الكاملة",
+        "description": "اطلع على جميع الأطباق المتاحة مع الصور والأسعار التفصيلية"
+      },
+      "preview": {
+        "title": "معاينة الأطباق",
+        "description": "شاهد صور عالية الجودة لكل طبق مع وصف مفصل للمكونات"
+      },
+      "time": {
+        "title": "وفر وقتك",
+        "description": "اختر طلبك مسبقاً واستلمه فور وصولك للمطعم"
+      }
+    }
+  },
+  "enjoyMakeFriends": {
+    "title": "استمتع وكون صداقات بلمسة زر",
+    "description": "اكتشف أشخاص جدد يشاركونك نفس الاهتمامات الغذائية وكون صداقات جديدة في أجواء مريحة ومميزة.",
+    "cta": "ابدأ تجربة مجانية",
+    "features": {
+      "connect": {
+        "title": "تواصل مع الآخرين",
+        "description": "التق بأشخاص جدد يحبون نفس المطاعم"
+      },
+      "share": {
+        "title": "شارك التجارب",
+        "description": "شارك تجاربك وذكرياتك مع الأصدقاء"
+      },
+      "enjoy": {
+        "title": "استمتع بالأجواء",
+        "description": "اقضِ أوقات ممتعة في بيئة اجتماعية رائعة"
+      }
+    }
+  },
+  "experience": {
+    "title": "دع تجربتك تفيد الآخرين..",
+    "description": "قيم المطاعم والأطباق، وشارك صور تجربتك.",
+    "features": {
+      "rating": {
+        "title": "تقييم الأطباق والمطاعم",
+        "description": "ساعد الآخرين في اتخاذ قرارات أفضل من خلال تقييماتك الصادقة"
+      },
+      "reviews": {
+        "title": "كتابة المراجعات والصور",
+        "description": "شارك تجربتك بالتفصيل مع صور شهية للأطباق"
+      },
+      "community": {
+        "title": "مجتمع تفاعلي لمحبي الطعام",
+        "description": "انضم إلى مجتمع نشط من عشاق الطعام وتبادل الخبرات"
+      }
+    }
+  },
+  "recommendations": {
+    "badge": "ترشيحات مدعمة بالذكاء الاصطناعي",
+    "title": "نعمل على ترشيح الأفضل دائماً ليلبي احتياجات مستخدمينا",
+    "description": "من خلال الصفحة الرئيسية يمكنك الوصول للمطاعم الأكثر ترشيحاً وملائماً لاحتياجاتك في نفس اللحظة",
+    "features": {
+      "ai": {
+        "title": "ذكاء اصطناعي متطور",
+        "description": "خوارزميات ذكية تتعلم من تفضيلاتك وسلوكك لتقديم ترشيحات دقيقة"
+      },
+      "personalized": {
+        "title": "ترشيحات شخصية مخصصة",
+        "description": "اقتراحات مطاعم وأطباق تناسب ذوقك وميزانيتك ووقتك المفضل"
+      },
+      "smart": {
+        "title": "تحليل ذكي للبيانات",
+        "description": "نحلل آلاف المراجعات والتقييمات لنقدم لك الخيارات الأفضل"
+      }
+    }
+  },
+  "electronicInvitations": {
+    "badge": "دعوات إلكترونية",
+    "title": "تي صديقك وياك؟ الحين ارسله دعوة وين ما تي",
+    "description": "شارك رابط الحجز مع أصدقائك، وخلو كل واحد يضيف طلبه الخاص بنفس الجلسة",
+    "cta": "تجارب لا تنسى..",
+    "features": {
+      "send": {
+        "title": "إرسال دعوات فورية",
+        "description": "أرسل دعوات إلكترونية لأصدقائك بضغطة واحدة عبر التطبيق"
+      },
+      "share": {
+        "title": "مشاركة تفاصيل الحجز",
+        "description": "شارك تفاصيل المطعم والوقت والمكان مع جميع المدعوين"
+      },
+      "group": {
+        "title": "تنظيم الجلسات الجماعية",
+        "description": "نظم جلسات طعام جماعية واجعل كل شخص يختار طلبه مسبقاً"
+      }
+    }
   },
   "features": {
     "title": "خدماتنا المميزة",
@@ -89,7 +241,7 @@
         "price": "599",
         "period": "/شهر",
         "description": "للمطاعم المتوسطة",
-        "popular": "الأكثر شعبية",
+        "popular": "الأكثــــــــر طلبـــــاً",
         "features": [
           "طلبات غير محدودة",
           "تحليلات متقدمة",
@@ -119,7 +271,7 @@
   "reservations": {
     "badge": "إدارة الحجوزات والطاولات",
     "title": "سيطر على حجوزاتك وطاولاتك في الوقت الفعلي",
-    "description": "لوحة تفاعلية تعرض حالة كل طاولة (متاحة – مشغولة – تنظيف). لتجنب الفوضى وتزيد كفاءة الاشغال. ونظام ترتي لإدارة الحجوزات: قبول رفض، تعديل، أو إضافة إلى قائمة الانتظار",
+    "description": "لوحـــة تفاعلية تعرض حالة كل طاولة (متاحة – مشغولة – تنظيف)، لتتجنب الفوضى وتزيد كفاءة الإشغــــال. ونظــــام ذكي لإدارة الحجوزات: قبول، رفض، تعديل، أو إضافة إلى قائمة الانتظــــار.",
     "cta": "جرب نظام الحجوزات",
     "stats": {
       "todayBookings": "حجز اليوم",
@@ -334,7 +486,7 @@
       }
     ],
     "dashboard": {
-      "managerName": "أحمد المدير",
+      "managerName": "أحمد محمد",
       "testimonial": "نظام رائع يساعدني في متابعة آراء العملاء وتحسين الخدمة باستمرار",
       "averageRating": "متوسط التقييم"
     }
@@ -363,6 +515,22 @@
       {
         "question": "هل يمكن ربط النظام مع أنظمة نقاط البيع الموجودة؟",
         "answer": "نعم، يدعم النظام التكامل مع معظم أنظمة نقاط البيع الشائعة والخدمات المصرفية. كما يمكن ربطه بتطبيقات التوصيل مثل هنقرستيشن وطلبات وأوبر إيتس."
+      },
+      {
+        "question": "ما مدى أمان بيانات العملاء ومعلومات الدفع؟",
+        "answer": "نستخدم أمان بمستوى البنوك مع تشفير SSL ونلتزم بالمعايير الأمنية الدولية. جميع بيانات الدفع تتم معالجتها من خلال بوابات دفع معتمدة ولا نحتفظ بمعلومات الدفع الحساسة على خوادمنا."
+      },
+      {
+        "question": "ما نوع الدعم الذي تقدمونه؟",
+        "answer": "نقدم دعماً فنياً على مدار الساعة طوال أيام الأسبوع من خلال قنوات متعددة تشمل الهاتف والبريد الإلكتروني والدردشة المباشرة. كما يقدم فريقنا جلسات تدريب مجانية ومساعدة في الإعداد للعملاء الجدد."
+      },
+      {
+        "question": "هل يمكنني تخصيص القائمة والأسعار؟",
+        "answer": "بالطبع! لديك السيطرة الكاملة على عناصر القائمة والفئات والأسعار والتوفر. يمكنك تحديث كل شيء في الوقت الفعلي من خلال لوحة التحكم سهلة الاستخدام أو التطبيق المحمول."
+      },
+      {
+        "question": "هل تتوفر تجربة مجانية؟",
+        "answer": "نعم، نقدم تجربة مجانية لمدة 14 يوماً مع وصول كامل لجميع الميزات. لا حاجة لبطاقة ائتمان للبدء، ويمكنك الإلغاء في أي وقت خلال فترة التجربة."
       }
     ]
   },
@@ -376,6 +544,16 @@
       "إشعارات فورية"
     ],
     "downloadApp": "حمل التطبيق",
+    "downloadButtons": {
+      "appStore": {
+        "prefix": "حمل من",
+        "store": "آب ستور"
+      },
+      "googlePlay": {
+        "prefix": "احصل عليه من",
+        "store": "جوجل بلاي"
+      }
+    },
     "dashboard": {
       "appName": "سو إيت",
       "todayOrders": "الطلبات اليوم",
@@ -418,5 +596,98 @@
     "email": "info@so-eat.com",
     "phone": "+966 50 123 4567",
     "address": "الرياض، المملكة العربية السعودية"
+  },
+  "terms": {
+    "badge": "الوثائق القانونية",
+    "title": "الشروط والأحكام",
+    "description": "يرجى قراءة هذه الشروط والأحكام بعناية قبل استخدام خدمتنا. من خلال الوصول إلى منصة سو إيت أو استخدامها، فإنك توافق على الالتزام بهذه الشروط.",
+    "lastUpdated": "آخر تحديث",
+    "sections": {
+      "acceptance": {
+        "title": "1. قبول الشروط",
+        "content": "من خلال الوصول إلى منصة سو إيت واستخدامها، فإنك تقبل وتوافق على الالتزام بشروط وأحكام هذه الاتفاقية. إذا كنت لا توافق على الالتزام بما ورد أعلاه، يرجى عدم استخدام هذه الخدمة.\n\nتنطبق هذه الشروط على جميع الزوار والمستخدمين وغيرهم ممن يصلون إلى الخدمة أو يستخدمونها. نحتفظ بالحق في تحديث وتغيير شروط الخدمة من وقت لآخر دون إشعار مسبق."
+      },
+      "services": {
+        "title": "2. وصف الخدمات",
+        "content": "توفر سو إيت منصة متكاملة لإدارة المطاعم والطلبات الإلكترونية. تشمل خدماتنا:\n\n• إدارة حجوزات المطاعم\n• أنظمة القوائم الرقمية\n• معالجة الطلبات والدفع\n• تعليقات العملاء والتحليلات\n• إدارة برامج الولاء\n\nنحتفظ بالحق في تعديل أو تعليق أو إيقاف أي جزء من خدماتنا في أي وقت."
+      },
+      "userResponsibilities": {
+        "title": "3. مسؤوليات المستخدم",
+        "content": "كمستخدم لسو إيت، فإنك توافق على:\n\n• تقديم معلومات دقيقة وكاملة\n• الحفاظ على أمان بيانات اعتماد حسابك\n• استخدام الخدمة للأغراض القانونية فقط\n• احترام المستخدمين الآخرين وشركاء المطاعم\n• عدم محاولة تعطيل أو إتلاف المنصة\n\nأنت مسؤول عن جميع الأنشطة التي تحدث تحت حسابك."
+      },
+      "privacy": {
+        "title": "4. الخصوصية وحماية البيانات",
+        "content": "نحن نأخذ خصوصيتك على محمل الجد ونلتزم بحماية معلوماتك الشخصية. تشرح سياسة الخصوصية الخاصة بنا كيفية جمع واستخدام وحماية بياناتك.\n\nباستخدام خدمتنا، فإنك توافق على جمع واستخدام المعلومات وفقاً لسياسة الخصوصية الخاصة بنا. نحن ننفذ تدابير أمنية مناسبة لحماية معلوماتك الشخصية."
+      },
+      "limitations": {
+        "title": "5. قيود المسؤولية",
+        "content": "لن تكون سو إيت مسؤولة عن أي أضرار غير مباشرة أو عرضية أو خاصة أو تبعية أو عقابية، بما في ذلك على سبيل المثال لا الحصر، فقدان الأرباح أو البيانات أو الاستخدام أو الشهرة أو الخسائر غير الملموسة الأخرى.\n\nنحن لا نضمن أن الخدمة ستكون غير منقطعة أو في الوقت المناسب أو آمنة أو خالية من الأخطاء. استخدامك للخدمة على مسؤوليتك الخاصة."
+      },
+      "contact": {
+        "title": "6. معلومات الاتصال",
+        "content": "إذا كان لديك أي أسئلة حول هذه الشروط والأحكام، يرجى الاتصال بنا:\n\nالبريد الإلكتروني: legal@so-eat.com\nالهاتف: +966 50 123 4567\nالعنوان: الرياض، المملكة العربية السعودية\n\nسنرد على استفساراتك خلال 48 ساعة خلال أيام العمل."
+      }
+    },
+    "footer": {
+      "title": "تحتاج مساعدة؟",
+      "description": "إذا كان لديك أي أسئلة حول هذه الشروط أو تحتاج إلى مساعدة، نحن هنا للمساعدة.",
+      "privacyPolicy": "سياسة الخصوصية",
+      "contactUs": "اتصل بنا"
+    }
+  },
+  "privacy": {
+    "badge": "الخصوصية والأمان",
+    "title": "سياسة الخصوصية",
+    "description": "نحن ملتزمون بحماية خصوصيتك وضمان أمان معلوماتك الشخصية. تشرح هذه السياسة كيفية جمع واستخدام وحماية بياناتك عند استخدام سو إيت.",
+    "lastUpdated": "آخر تحديث",
+    "sections": {
+      "collection": {
+        "title": "1. المعلومات التي نجمعها",
+        "content": "نحن نجمع المعلومات التي تقدمها لنا مباشرة، مثل:\n\n• معلومات الحساب (الاسم، البريد الإلكتروني، رقم الهاتف)\n• تفضيلات المطاعم والقيود الغذائية\n• تاريخ الحجوزات والطلبات\n• معلومات الدفع (تتم معالجتها بأمان)\n• بيانات الموقع (بإذنك)\n• معلومات الجهاز والاستخدام\n\nكما نجمع المعلومات تلقائياً من خلال ملفات تعريف الارتباط والتقنيات المماثلة لتحسين تجربتك وتحليل أنماط الاستخدام."
+      },
+      "usage": {
+        "title": "2. كيف نستخدم معلوماتك",
+        "content": "نستخدم معلوماتك من أجل:\n\n• تقديم وتحسين خدماتنا\n• معالجة الحجوزات والطلبات\n• إرسال التحديثات والإشعارات المهمة\n• تخصيص تجربتك والتوصيات\n• تحليل أنماط الاستخدام وتحسين منصتنا\n• منع الاحتيال وضمان الأمان\n• الامتثال للالتزامات القانونية\n\nنحن لا نبيع معلوماتك الشخصية لأطراف ثالثة لأغراض تسويقية."
+      },
+      "protection": {
+        "title": "3. حماية البيانات والأمان",
+        "content": "نطبق تدابير أمنية معيارية في الصناعة لحماية بياناتك:\n\n• تشفير البيانات الحساسة أثناء النقل والتخزين\n• عمليات تدقيق أمني منتظمة وتقييم نقاط الضعف\n• أنظمة التحكم في الوصول والمصادقة\n• معالجة دفع آمنة من خلال مقدمي خدمات معتمدين\n• تدريب منتظم للموظفين على حماية البيانات\n• إجراءات الاستجابة للحوادث\n\nبينما نسعى لحماية معلوماتك، لا توجد طريقة نقل عبر الإنترنت آمنة بنسبة 100%."
+      },
+      "cookies": {
+        "title": "4. ملفات تعريف الارتباط والتتبع",
+        "content": "نستخدم ملفات تعريف الارتباط والتقنيات المماثلة من أجل:\n\n• تذكر تفضيلاتك وإعداداتك\n• تحليل حركة المرور وأنماط الاستخدام على الموقع\n• تقديم محتوى وتوصيات مخصصة\n• تمكين ميزات وسائل التواصل الاجتماعي\n• تحسين أداء ووظائف الموقع\n\nيمكنك التحكم في إعدادات ملفات تعريف الارتباط من خلال تفضيلات المتصفح. ومع ذلك، قد يؤثر تعطيل ملفات تعريف الارتباط على بعض وظائف الموقع."
+      },
+      "rights": {
+        "title": "5. حقوق الخصوصية الخاصة بك",
+        "content": "لديك الحق في:\n\n• الوصول إلى معلوماتك الشخصية\n• تصحيح البيانات غير الدقيقة\n• طلب حذف بياناتك\n• الاعتراض على معالجة بياناتك\n• نقل البيانات\n• سحب الموافقة في أي وقت\n\nلممارسة هذه الحقوق، يرجى الاتصال بنا باستخدام المعلومات المقدمة أدناه. سنرد على طلبك خلال 30 يوماً."
+      },
+      "thirdParty": {
+        "title": "6. خدمات الأطراف الثالثة",
+        "content": "قد نشارك معلوماتك مع مقدمي خدمات أطراف ثالثة موثوقين يساعدوننا في:\n\n• معالجة المدفوعات (Stripe، PayPal)\n• التحليلات ومراقبة الأداء\n• خدمات دعم العملاء\n• أدوات التسويق والتواصل\n• خدمات التخزين السحابي والاستضافة\n\nهؤلاء الشركاء ملزمون تعاقدياً بحماية معلوماتك واستخدامها فقط للأغراض المحددة."
+      },
+      "contact": {
+        "title": "7. معلومات الاتصال",
+        "content": "إذا كان لديك أسئلة حول سياسة الخصوصية هذه أو ممارسات البيانات الخاصة بنا، يرجى الاتصال بنا:\n\nمسؤول حماية البيانات\nالبريد الإلكتروني: privacy@so-eat.com\nالهاتف: +966 50 123 4567\nالعنوان: الرياض، المملكة العربية السعودية\n\nنحن ملتزمون بحل أي مخاوف متعلقة بالخصوصية بسرعة وشفافية."
+      }
+    },
+    "rights": {
+      "title": "حقوق البيانات الخاصة بك",
+      "description": "بموجب قوانين حماية البيانات المعمول بها، لديك الحقوق التالية فيما يتعلق بمعلوماتك الشخصية:",
+      "access": "الحق في الوصول",
+      "rectification": "الحق في التصحيح",
+      "erasure": "الحق في المحو",
+      "portability": "نقل البيانات",
+      "restriction": "تقييد المعالجة",
+      "objection": "الحق في الاعتراض"
+    },
+    "footer": {
+      "title": "أسئلة حول الخصوصية؟",
+      "description": "إذا كان لديك أي مخاوف حول كيفية تعاملنا مع بياناتك أو تحتاج إلى ممارسة حقوق الخصوصية الخاصة بك، نحن هنا للمساعدة.",
+      "termsConditions": "الشروط والأحكام",
+      "contactUs": "اتصل بنا"
+    }
+  },
+  "common": {
+    "backToHome": "العودة للرئيسية"
   }
 }
