Add claim request feature and update business/email protos
- Add new claim_request.proto for business claim functionality
- Update business.proto and email.proto with new fields
- Add Sidebar component for navigation
- Update business creation step 4 and search pages
- Regenerate gRPC client code
- Update English and Arabic translations
- Update business service with new functionality

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -689,5 +689,21 @@
   },
   "common": {
     "backToHome": "العودة للرئيسية"
+  },
+  "sidebar": {
+    "home": "الرئيسية",
+    "externalDatabases": "قواعد البيانات الخارجية",
+    "products": "المنتجات",
+    "externalAccounts": "الحسابات الخارجية",
+    "manageSuggestions": "إدارة الاقتراحات",
+    "posts": "المنشورات",
+    "articles": "المقالات",
+    "services": "الخدمات",
+    "orders": "الطلبات",
+    "transactions": "المعاملات",
+    "rightsPrivacy": "حقوق والخصوصيات",
+    "ads": "الإعلانات",
+    "announcements": "إعلانات",
+    "requests": "طلبات"
   }
 }
